fix: make about me more visible

--- a/src/index.css
+++ b/src/index.css
@@ -100,7 +100,7 @@ nav button{
 }
 
 .about-page p{
-  color: grey;
+  color: rgb(218, 216, 216);
 }
 
 .about-page li{
